# powertochoose-mcp

./: .env.example  .gitignore  ARCHITECTURE.drawio  ARCHITECTURE.md  BACKEND_QUICKSTART.md  BUILDLOG.md  Dockerfile  Dockerfile.api  INTEGRATION_LOG.md  PUBLIC_API_ARCHITECTURE.md  README.md  SYNOLOGY_DEPLOYMENT.md  cleanup_test_data.py  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_db.py
.github/: copilot-instructions.md
src/powertochoose_mcp/: __init__.py  __main__.py  api_server.py  calculator.py  config.py  efl_parser.py  models.py  scraper.py  server.py
src/powertochoose_mcp/db/: __init__.py  operations.py  schema.py
src/powertochoose_mcp/utils/: logging.py
tests/integration/: test_calculator.py  test_database.py  test_efl_parser.py  test_mcp_tools.py
